--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 robin_stocks==1.5.3
-pandas==1.0.5
-numpy==1.18.5
-matplotlib==3.2.2
+pandas
+numpy
+matplotlib
 yfinance==0.1.55
 streamlit==0.71.0
-seaborn==0.10.1
+seaborn
